# json-sql-guide

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml  integration.yml  pr-comment.yml
docs/: dogfood-findings.md  implementation-plan.md  requirements.md  sql-catalog-snapshot.json
fixture/: __init__.py  schema.sql
fixture/seeds/: __init__.py  base.py  dates_and_intervals.py  deep_nest.py  events.py  hybrid.py  legacy.py  tags_with_nums.py  user_settings.py
src/validator/: __init__.py  classifier.py  cli.py  diff.py  directives.py  extractor.py  fixture.py  models.py  reporter.py  runner.py  wraps.py
tests/: conftest.py
tests/golden/: guide_catalog.json
tests/integration/: test_fixture.py  test_runner.py
tests/unit/: test_classifier.py  test_classifier_golden.py  test_diff.py  test_directives.py  test_extractor.py  test_extractor_golden.py  test_reporter.py  test_smoke.py  test_wraps.py
