[project]
name = "json-sql-guide"
version = "0.0.0"
description = "SQL validator for the Oracle SQL/JSON Developer Guide"
authors = [{ name = "Rick Houlihan", email = "rick.houlihan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "oracledb>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-pyyaml",
]

[project.scripts]
validator = "validator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validator", "fixture"]

# ───────── ruff ─────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "TCH", # flake8-type-checking
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "PT",  # pytest-style
]
ignore = [
    "E501",  # line length handled by formatter
    "TC001", # domain types stay importable at runtime — we use `from __future__ import annotations`
    "TC003", # standard library imports stay at module level
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",  # function name may be long for descriptive tests
    "N803",  # arg name may shadow stdlib for fixtures
    "TC003", # type-checking imports stay at module level for test readability
]

[tool.ruff.format]
quote-style = "double"

# ───────── mypy ─────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "oracledb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ───────── pytest ─────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: marks tests requiring a live Oracle database",
    "slow: marks tests that take more than 1 second",
    "requires_oracle: marks tests requiring Oracle 26ai Free service container",
]

# ───────── coverage ─────────
[tool.coverage.run]
source = ["src/validator"]
branch = true
omit = [
    "src/validator/cli.py",  # CLI integration tested via subprocess in integration/
    "src/validator/fixture.py",  # FixtureLoader tested in integration/test_fixture.py
    "src/validator/runner.py",  # Runner tested in integration/test_runner.py
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
